# dan-rusty-rogue

./: .gitignore  Cargo.toml  TODO  index.html  readme.md
.github/workflows/: rust-clippy.yml  rust.yml
src/: console_consts.rs  consts.rs  main.rs  main.rs.bak  state.rs
src/components/: mod.rs  player.rs  point.rs  position.rs  render.rs
src/maps/: map.rs  map_builder.rs  mod.rs
src/maths/: rect.rs
src/resources/: user_command.rs
src/systems/: entity_render.rs  handle_input.rs  handle_player_commands.rs  mod.rs
wasm/: index.html
