[package]
name = "dan-rusty-rogue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { version = "0.8.0", features = ["dynamic"] } # Debug
# bevy = { version = "0.8.0" } # Release
bevy_ecs = "0.8.0"
# crossterm = "0.25.0"
bracket-terminal = "0.8.5"
bracket-random = "0.8.2"
wasm-bindgen = "0.2.82"
# sdl2 = "0.35.2"
# gl = "0.14.0"

# Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3